# Kratos

./: .clang-format  .cursorrules  .data.json  .directory  .env  .gitignore  .gitlab-ci.yml  .gitmodules  .pydocstyle  .travis.yml  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Common_Jamroot  INSTALL.md  JamFile_readme  KRATOS.files  KRATOS.includes  Kratos.kdev4  KratosPaths.py.in  Kratos_2.includes  LICENCE  Marti_old.sh  README  README.md  README_SIA_IGA_OPTIMIERUNG.md  appveyor.yml  build.bat.txt  build_new.txt  compile_commands.json  configure.bat  configure.sh  dass  file.txt  import_metis.py  isogeometric_beam_variables.csv  kratos.files  kratos.includes  kratos_configure_sh_general.sh  (+16 more)
applications/: .directory  CMakeLists.txt  Makefile  applications_interface.py
applications/ALEapplication/: ALEApplication.py  CMakeLists.txt  Jamfile  ale_application.cpp  ale_application.h  ale_application_variables.h  license.txt
applications/AdjointFluidApplication/: AdjointFluidApplication.py  CMakeLists.txt  adjoint_fluid_application.cpp  adjoint_fluid_application.h  adjoint_fluid_application_variables.cpp  adjoint_fluid_application_variables.h  license.txt
applications/CSharpWrapperApplication/: CMakeLists.txt  CSharpWrapperApplication.json  CSharpWrapperApplication.py  README.md  csharp_wrapper_application.cpp  csharp_wrapper_application.h  csharp_wrapper_application_variables.cpp  csharp_wrapper_application_variables.h  external_interface.cpp  external_interface.h  external_interface_bindings.cpp  id_translator.cpp  id_translator.h  kratos_internals.cpp  kratos_internals.h  kratos_wrapper.cpp  kratos_wrapper.h  license.txt  mesh_converter.cpp  mesh_converter.h  mesh_converter_old.cpp  model_part_wrapper.cpp  model_part_wrapper.h  pyproject.toml  vector3.cpp  vector3.h
applications/CableNetApplication/: CMakeLists.txt  CableNetApplication.json  CableNetApplication.py  cable_net_application.cpp  cable_net_application.h  cable_net_application_variables.cpp  cable_net_application_variables.h  pyproject.toml
applications/ChimeraApplication/: CMakeLists.txt  CMakeLists.txt~  ChimeraApplication.json  ChimeraApplication.py  README.md  README.txt~  chimera_application.cpp  chimera_application.h  chimera_application_variables.cpp  chimera_application_variables.h  license.txt  pyproject.toml
applications/CoSimulationApplication/: CMakeLists.txt  CoSimulationApplication.json  CoSimulationApplication.py  README  README.md  aditya_to_discuss  co_simulation_application.cpp  co_simulation_application.h  co_simulation_application_variables.cpp  co_simulation_application_variables.h  license.txt  pyproject.toml
applications/CompressiblePotentialFlowApplication/: CMakeLists.txt  CompressiblePotentialFlowApplication.json  CompressiblePotentialFlowApplication.py  README.md  compressible_potential_flow_application.cpp  compressible_potential_flow_application.h  compressible_potential_flow_application_variables.cpp  compressible_potential_flow_application_variables.h  pyproject.toml
applications/ConstitutiveLawsApplication/: CMakeLists.txt  ConstitutiveLawsApplication.json  ConstitutiveLawsApplication.py  README.md  constitutive_laws_application.cpp  constitutive_laws_application.h  constitutive_laws_application_variables.cpp  constitutive_laws_application_variables.h  pyproject.toml
applications/ConstitutiveModelsApplication/: CMakeLists.txt  ConstitutiveModelsApplication.json  ConstitutiveModelsApplication.py  README.md  constitutive_models_application.cpp  constitutive_models_application.h  constitutive_models_application_variables.cpp  constitutive_models_application_variables.h  license.txt  pyproject.toml
applications/ContactMechanicsApplication/: CMakeLists.txt  ContactMechanicsApplication.json  ContactMechanicsApplication.py  README.md  contact_mechanics_application.cpp  contact_mechanics_application.h  contact_mechanics_application_variables.cpp  contact_mechanics_application_variables.h  pyproject.toml
applications/ContactStructuralMechanicsApplication/: CMakeLists.txt  ContactStructuralMechanicsApplication.json  ContactStructuralMechanicsApplication.py  README.md  contact_structural_mechanics_application.cpp  contact_structural_mechanics_application.h  contact_structural_mechanics_application_variables.cpp  contact_structural_mechanics_application_variables.h  license.txt  pyproject.toml
applications/ConvectionDiffusionApplication/: CMakeLists.txt  ConvectionDiffusionApplication.json  ConvectionDiffusionApplication.py  README.md  convection_diffusion_application.cpp  convection_diffusion_application.h  convection_diffusion_application_variables.cpp  convection_diffusion_application_variables.h  pyproject.toml
applications/DEMApplication/: CMakeLists.txt  DEMApplication.json  DEMApplication.py  DEM_application.cpp  DEM_application.h  DEM_application_variables.h  Doxyfile  README.md  pyproject.toml
applications/DEMFEMVolumeCouplingApplication/: CMakeLists.txt  DEMFEM_volume_coupling_application.cpp  DEMFEM_volume_coupling_application.h  DEMFEM_volume_coupling_application.py
applications/DEM_FEM_Application/: CMakeLists.txt  DEM_FEM_Application.py  dem_fem__application.cpp  dem_fem__application.h
applications/DEM_application/: CMakeLists.txt  DEMApplication.py  DEM_LinearCL.h  DEM_Plasticity1DCL.cpp  DEM_Plasticity1DCL_2.h  DEM_application.cpp  DEM_application.h  DEM_application_variables.h  README.md  license.txt
applications/DEM_circles_application/: DEM_application.h
applications/DamApplication/: CMakeLists.txt  DamApplication.json  DamApplication.py  README.txt  dam_application.cpp  dam_application.h  dam_application_variables.cpp  dam_application_variables.h  pyproject.toml
embedded_python/: CMakeLists.txt  krun_main.cpp
kratos/: .svnignore  CMakeLists.txt  Common_Jamroot  Intel-KratosMultiphysics.json  JamFile_readme  Jamfile  KRATOS.files  KRATOS.includes  KratosMultiphysics-all.json  KratosMultiphysics.json  Kratos_2.files  README  kratos_version.h.in  license.txt  local_configure.sh  pyproject.toml  release.sh
(+55840 files in other folders)
